[gd_scene load_steps=2 format=3 uid="uid://djnem5h51vij2"]

[ext_resource type="Script" path="res://src/gameplay/units/attack/Attack.gd" id="1_dganp"]

[node name="Attack" type="Node2D"]
script = ExtResource("1_dganp")

[node name="Timer" type="Timer" parent="."]

[node name="DelayToAttack" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DelayToAttack" to="." method="_on_delay_to_attack_timeout"]
